add module to class info